# heftroman-digitalisierung

./: README.md  pyproject.toml
skripte/: seitenzahlen.csv  umfangsschaetzung.csv  umfangsschaetzung.ipynb  umfangsschaetzung_umfang.csv
