[tool.poetry]
name = "heftroman-digitalisierung"
version = "0.1.0"
description = ""
authors = ["André Wendler <andre.wendler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.2"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
